Trim some lists